--- a/styles/base.css
+++ b/styles/base.css
@@ -48,6 +48,8 @@ header span{
 /******************Navigation *********************/
 .navigation {
     display: none;
+    background-color: #000;
+    
 }
 
 .navigation.show {
@@ -63,13 +65,14 @@ header span{
 .navigation a{
     display: block;
     padding: .8rem 10px;
-    color: #3D405B;
+    color: #fff;
     text-decoration: none;
     border-bottom: solid 1px #ddd;
+    
 }
 
 .navigation li.active{
-    background-color: #eee;
+    background-color: #ccc;
 }
 .navigation a:hover{
     background-color: #E07A5F;
@@ -79,6 +82,92 @@ h1{
     color: #3D405B;
 
 }
+/******************Main *********************/
+.container{
+    display: grid;
+    grid-template-columns: 2fr 1fr;;
+    gap: 20px;
+    padding: 10px;
+}
+.about-me, .student-photo{
+    background: #d9d9d9;
+    padding: 15px;
+}
+.about-me h4, .student-photo h4 {
+  background: #333;
+  color: white;
+  padding: 8px;
+  margin: -15px -15px 15px -15px; /* aligns header flush with div edges */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.student-photo img {
+    width: 100%;
+    height: auto; 
+    display: block;
+    border-radius: 5px;
+}
+
+.container-2 h4{
+    background: #333;
+  color: white;
+  padding: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Buttons */
+.filters{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin: 15px 0;
+}
+.filters button {
+    background: #d9d9d9;
+    border: 1px solid #999;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-weight: bold;
+    border-radius: 6px;
+    transition: background 0.3s;
+}
+.filters button:hover {
+      background: #bbb;
+    }
+
+/* Course grid */
+.course-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 15px;
+      padding: 0 20px 30px;
+}
+.course-card {
+      background: #d9d9d9;
+      padding: 15px;
+      border-radius: 8px;
+      text-align: center;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
+
+.course-card h4 {
+      margin: 0 0 10px;
+      background: #333;
+      color: white;
+      padding: 5px;
+      border-radius: 4px;
+    }
+
+/* Total credits display */
+    #total-credits {
+      text-align: center;
+      font-weight: bold;
+      margin: 15px 0;
+    }
 /******************Footer *********************/
 footer{
     background-color: #eee;
