--- a/chamber/styles/discover.css
+++ b/chamber/styles/discover.css
@@ -117,7 +117,7 @@ h1{
       padding: 1rem;
       border-radius: 8px;
       max-width: 400px;
-      margin: 0 auto;
+      margin: 10px auto;
       text-align: center;
     }
 
